<resources>
    <string name="app_name">SathiJivanko</string>
    <string name="phone_number">&lt;u>Your Phone Number&lt;/u>:</string>
    <string name="email_address">&lt;u>Your Email Address&lt;/u>:</string>
    <string name="verify_code">&lt;u>Enter Verification Code&lt;/u>:</string>
    <string name="phoneClickContinue">When you press "Continue" to Move Forward, Sathi will send you a text with a verification code. Only then the verified number can be used to login. Message or Data Rate may apply. </string>
    <string name="facebook_app_id">180304343337101</string>
    <string name="fb_login_protocol_scheme">fb180304343337101</string>
    <string name="finalHurdleNewUser">When you press continue to move forward, you have confirmed that you are 18 years of age and agree to all the terms and conditions that are set by Sathi.</string>
    <string name="firstReasonDelete">I found someone.</string>
    <string name="secondReasonDelete">I want a fresh start.</string>
    <string name="thirdReasonDelete">Sathi was a bit much.</string>
    <string name="fourthReasonDelete">I need a break</string>
    <string name="fifthReasonDelete">Other</string>
    <string name="enableLocation">To use Sathi you must enable your device Location.</string>
    <string name="notVerifed">It seems like you have not been verified. Check your email to complete registration.</string>
    <string name="verifyThing">You can verify by uploading your own photo. The uploaded photo must match the pictures of your account.</string>
    <string-array name="list_of_gender">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="list_of_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow</item>
    </string-array>
    <string-array name="list_of_preference">
        <item>Woman</item>
        <item>Man</item>
        <item>Both</item>
    </string-array>
    <string-array name="Bagmati">
        <item>Kathmandu Valley</item>
        <item>Dhading</item>
        <item>Kavrepalanchok</item>
        <item>Nuwakot</item>
        <item>Rasuwa</item>
        <item>Sindhupalchok</item>
    </string-array>
    <string-array name="Dhawalagiri">
        <item>Baglung</item>
        <item>Mustang</item>
        <item>Myagdi</item>
        <item>Parbat</item>
    </string-array>
    <string-array name="Mahakali">
        <item>Baitadi</item>
        <item>Dadeldhura</item>
        <item>Darchula</item>
        <item>Kanchanpur</item>
    </string-array>
    <string-array name="Mechi">
        <item>Ilam</item>
        <item>Jhapa</item>
        <item>Panchthar</item>
        <item>Taplejung</item>
    </string-array>
    <string-array name="Bheri">
        <item>Banke</item>
        <item>Bardiya</item>
        <item>Dailekh</item>
        <item>Surkhet</item>
        <item>Jajarkot</item>
    </string-array>
    <string-array name="Narayani">
        <item>Bara</item>
        <item>Chitwan</item>
        <item>Makwanpur</item>
        <item>Parsa</item>
        <item>Rautahat</item>
    </string-array>
    <string-array name="Rapti">
        <item>Dang Deokhuri</item>
        <item>Pyuthan</item>
        <item>Rolpa</item>
        <item>Rukum</item>
        <item>Salyan</item>
    </string-array>
    <string-array name="Gandaki">
        <item>Gorkha</item>
        <item>Kaski</item>
        <item>Lamjung</item>
        <item>Manang</item>
        <item>Syangja</item>
        <item>Tanahu</item>
    </string-array>
    <string-array name="Seti">
        <item>Achham</item>
        <item>Bajhang</item>
        <item>Bajura</item>
        <item>Doti</item>
        <item>Kailali</item>
    </string-array>
    <string-array name="Sagarmatha">
        <item>Khotang</item>
        <item>Okhaldhunga</item>
        <item>Saptari</item>
        <item>Siraha</item>
        <item>Solukhumbu</item>
        <item>Udayapur</item>
    </string-array>
    <string-array name="Janakpur">
        <item>Dhanusa</item>
        <item>Dholkha</item>
        <item>Mahottari</item>
        <item>Ramechhap</item>
        <item>Sarlahi</item>
        <item>Sindhuli</item>
    </string-array>
    <string-array name="Koshi">
        <item>Bhojpur</item>
        <item>Dhankuta</item>
        <item>Morang</item>
        <item>Sankhuwasabha</item>
        <item>Sunsari</item>
        <item>Terhathum</item>
    </string-array>
    <string-array name="Lumbini">
        <item>Arghakhanchi</item>
        <item>Gulmi</item>
        <item>Kapilvastu</item>
        <item>Nawalparasi</item>
        <item>Palpa</item>
        <item>Rupandehi</item>
    </string-array>
    <string-array name="Karnali">
        <item>Dolpa</item>
        <item>Humla</item>
        <item>Jumla</item>
        <item>Kalikot</item>
        <item>Mugu</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>